--- a/update-vm.yml
+++ b/update-vm.yml
@@ -1,16 +1,18 @@
 ---
-- hosts: localhost
+- hosts: all
   become: true
   become_user: root
   tasks:
     - name: Update apt repo and cache on all Debian/Ubuntu boxes
       apt: 
+        name: "*"
         update_cache: yes 
         force_apt_get: yes 
         state: latest
 
     - name: Upgrade all packages on servers
       apt: 
+        name: "*"
         upgrade: dist 
         force_apt_get: yes
     
