--- a/update-vm.yml
+++ b/update-vm.yml
@@ -1,24 +1,40 @@
 ---
 - hosts: all
   become: true
-  become_user: root
+ 
   tasks:
+ 
     - name: Update apt repo and cache on all Debian/Ubuntu boxes
-      apt: 
-        name: "*"
+      apt:
         update_cache: yes 
-        force_apt_get: yes 
-        state: latest
-
-    - name: Upgrade all packages on servers
-      apt: 
-        name: "*"
-        upgrade: dist 
+        cache_valid_time: 3600
         force_apt_get: yes
-    
+        state: latest
+ 
+    - name: Safe-Upgrade all packages on servers
+      apt:
+        upgrade: safe
+        force_apt_get: yes
+
     - name: Install ansible
       apt:
         name: ansible
-        state: latest
-        
-
+        state: latest    
+ 
+    - name: Check if a reboot is needed on all servers
+      register: reboot_required_file
+      stat: path=/var/run/reboot-required get_md5=no
+ 
+    - name: Reboot the box if kernel updated
+      reboot:
+        msg: "Reboot initiated by Ansible for kernel updates"
+        connect_timeout: 5
+        reboot_timeout: 300
+        pre_reboot_delay: 0
+        post_reboot_delay: 30
+        test_command: uptime
+      when: reboot_required_file.stat.exists
+ 
+    - name: Remove dependencies that are no longer required
+      apt:
+        autoremove: yes
